# jt_ams/__init__.py
@@ -1,2 +1,2 @@
 from .ams import create_account, update_account, get_account, get_accounts, \
-    delete_account, get_member, add_member, delete_member
+    delete_account, get_member, add_member, delete_member, get_account_by_id
